# Ideogram-Json-Captioner

./: .gitignore  LICENSE  README.md  captioner_model_profiles.example.json  pyproject.toml  requirements.txt
captioner_prompts.example/: bbox_system.txt  bbox_user.txt  creative_directive.txt  faithful_directive.txt  image_to_json_system.txt  image_to_json_user.txt  json_refine_system.txt  json_refine_user.txt  json_schema_instructions.txt  plain_caption_system.txt  plain_caption_user.txt  text_to_json_system.txt  text_to_json_user.txt
ideogram_captioner/: exif_caption.py  gui.py  llm_captioning.py  store.py
tests/: test_exif_caption.py  test_gui_selection.py  test_llm_captioning.py  test_store.py
