[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ideogram-captioner"
version = "0.1.0"
description = "Desktop editor for image-caption pairs in Ideogram 4 JSON caption format."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["captioning", "ideogram", "image-dataset", "tkinter"]
dependencies = ["Pillow>=10.0", "openai>=1.0", "huggingface_hub>=0.23"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]

[project.scripts]
ideogram-captioner = "ideogram_captioner.gui:main"

[tool.setuptools.packages.find]
include = ["ideogram_captioner*"]
